secondfile/objects/Engagement__c.object
<CustomObject>
    <description>Object to store Events and Sponsorships to display on Connect tab</description>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ready for Review</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Banner_Image__c</fullName>
        <formula>IMAGE(Banner_Link__c,&quot;Banner Image&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Banner Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Banner_Link__c</fullName>
        <label>Banner Link:</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Banner_Status__c</fullName>
        <label>Banner Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Display_On_Landing_Page__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display On Landing Page</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Image_Link__c</fullName>
        <label>Event Image Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Event_Image__c</fullName>
        <formula>IMAGE(Event_Image_Link__c,&quot;Event Image&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Published</fullName>
                </value>
                <value>
                    <fullName>Archived</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Website_Friendly_Name__c</fullName>
        <description>Website Friendly Name this feild for event website page</description>
        <label>Website Friendly Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <label>Engagement</label>
    <listViews>
        <fullName>Banner</fullName>
        <columns>NAME</columns>
        <columns>Banner_Status__c</columns>
        <columns>Banner_Image__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Engagement__c.Banner</value>
        </filters>
        <label>Banners</label>
    </listViews>
    <listViews>
        <fullName>Events</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Status__c</columns>
        <columns>Website__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Engagement__c.Event</value>
        </filters>
        <label>Events</label>
    </listViews>
    <listViews>
        <fullName>Sponsorships</fullName>
        <columns>NAME</columns>
        <columns>Website__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Engagement__c.Sponsorship</value>
        </filters>
        <label>Sponsorships</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Engagements</pluralLabel>
    <recordTypes>
        <fullName>Banner</fullName>
        <active>true</active>
        <description>Banner New Record Type</description>
        <label>Banner</label>
    </recordTypes>
    <recordTypes>
        <fullName>Event</fullName>
        <active>true</active>
        <description>Events Record type</description>
        <label>Event</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sponsorship</fullName>
        <active>true</active>
        <description>Sponsorship Record type</description>
        <label>Sponsorship</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Banner_Active_Validation</fullName>
        <active>true</active>
        <description>Banner Active Validation status is Active than Image should uploead</description>
        <errorConditionFormula>AND(
ISPICKVAL(Banner_Status__c, &quot;Active&quot;),
OR(
Banner_Link__c=NULL
)
)</errorConditionFormula>
        <errorDisplayField>Approval_Status__c</errorDisplayField>
        <errorMessage>Please upload an Banner image to mark the Banner Status as Active</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>End_Date_Cannot_be_Less_Than_Start_Date</fullName>
        <active>true</active>
        <description>End date cannot be less than start date</description>
        <errorConditionFormula>OR(AND(
ISNEW(),End_Date__c &lt; Start_Date__c ,
RecordType.Name=&quot;Event&quot;
),
AND(ISCHANGED(End_Date__c),
 End_Date__c &lt; Start_Date__c,
RecordType.Name=&quot;Event&quot;))</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>End Date cannot be prior to Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>End_Time_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND (NOT(ISBLANK( End_Time__c)), NOT(
REGEX(  End_Time__c  , &apos;^(([0][0-9]|[1][0-2])|[0-9]):([0-5][0-9])( *)((AM|PM)|(A|P))$&apos;)
))</errorConditionFormula>
        <errorDisplayField>End_Time__c</errorDisplayField>
        <errorMessage>Invalid time format. Please use HH:MM AM/PM</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_City_and_State_for_Events</fullName>
        <active>true</active>
        <description>User will be required to enter City and State when publishing Event</description>
        <errorConditionFormula>AND ( 
ISPICKVAL(Status__c, &quot;Published&quot;),
ISBLANK(City__c), 
ISBLANK(State__c ),
RecordType.DeveloperName = &quot;Event&quot;)</errorConditionFormula>
        <errorMessage>In order to publish this Event, City and State must be entered.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Descrip_for_Events_and_Spnships</fullName>
        <active>true</active>
        <description>User will be required to enter description when publishing Event or Sponsorship record</description>
        <errorConditionFormula>AND ( 
ISPICKVAL(Status__c, &quot;Published&quot;),
ISBLANK( Description__c ), 
OR( RecordType.DeveloperName = &quot;Event&quot;, RecordType.DeveloperName = &quot;Sponsorship&quot;))</errorConditionFormula>
        <errorDisplayField>Description__c</errorDisplayField>
        <errorMessage>In order to publish this record, a description must be entered.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Image_for_Events</fullName>
        <active>true</active>
        <description>User will be required to upload image when publishing Event</description>
        <errorConditionFormula>AND ( 
ISPICKVAL(Status__c, &quot;Published&quot;),
ISBLANK( Event_Image_Link__c ),
RecordType.DeveloperName = &quot;Event&quot;)</errorConditionFormula>
        <errorMessage>In order to publish this Event, an image must be uploaded</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Start_and_End_Dates_for_Events</fullName>
        <active>true</active>
        <description>User will be required to enter Start and End Dates when publishing Event</description>
        <errorConditionFormula>AND ( 
ISPICKVAL(Status__c, &quot;Published&quot;),
ISBLANK(Start_Date__c ), 
ISBLANK(End_Date__c ),
RecordType.DeveloperName = &quot;Event&quot;)</errorConditionFormula>
        <errorMessage>In order to publish this Event, Start and End Dates must be entered.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Website_for_Events_and_Spnships</fullName>
        <active>true</active>
        <description>User will be required to enter website when publishing Event or Sponsorship record</description>
        <errorConditionFormula>AND ( 
ISPICKVAL(Status__c, &quot;Published&quot;),
ISBLANK( Website__c), 
OR( RecordType.DeveloperName = &quot;Event&quot;, RecordType.DeveloperName = &quot;Sponsorship&quot;))</errorConditionFormula>
        <errorDisplayField>Website__c</errorDisplayField>
        <errorMessage>In order to publish this record, a website must be entered.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_Time_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND (NOT(ISBLANK(Start_Time__c)), NOT(
REGEX( Start_Time__c , &apos;^(([0][0-9]|[1][0-2])|[0-9]):([0-5][0-9])( *)((AM|PM)|(A|P))$&apos;)
))</errorConditionFormula>
        <errorDisplayField>Start_Time__c</errorDisplayField>
        <errorMessage>Invalid time format. Please use HH:MM AM/PM</errorMessage>
    </validationRules>
</CustomObject>